--- a/client/index.html
+++ b/client/index.html
@@ -1,9 +1,12 @@
 <html>
 <head>
-    <title>Express React Template</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Supplemntal SIS</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Archivo+Narrow&family=Barlow&family=Montserrat:wght@400&display=swap" rel="stylesheet">
 </head>
 <body>
 <div id="root"></div>
+<div id="portal"></div>
 </body>
 </html>
