--- a/client/index.html
+++ b/client/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>Supplemntal SIS2</title>
+    <title>Supplemntal SIS</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Archivo+Narrow&family=Barlow&family=Montserrat:wght@400&display=swap" rel="stylesheet">
